tests/paczka2/big_fuzzy/51758441.err
Error in line 8: Ei2bYwk6d S57 5,6
Error in line 5: JSSe1FvMOu A925 91,9
Error in line 23: cqAZtam A567 65,7
Error in line 17: GFs A925 33,5
Error in line 35: Hag3BfA A925 8,3
Error in line 42: Hm9sp S57 127,16
Error in line 34: Hm9sp S57 37,0
Error in line 40: Ei2bYwk6d A941 54,8
Error in line 44: Hm9sp A925 32,3
Error in line 51: A925 A941 54,1
Error in line 56: Ei2bYwk6d A925 28,4
Error in line 33: JSSe1FvMOu A567 42,3
Error in line 77: GFs S57 31,3
Error in line 66: Hag3BfA A567 483,1
Error in line 91: A925 A925 49,8
Error in line 100: Hag3BfA A567 21,1
Error in line 103: Hag3BfA S57 60,8
Error in line 102: A925 S57 14,5
Error in line 116: cqAZtam A941 223,0
Error in line 122: JSSe1FvMOu A567 56,2
Error in line 127: Hm9sp A925 19,8
Error in line 140: Ei2bYwk6d S57 58,70
Error in line 146: Hag3BfA S57 24,12
Error in line 137: Ei2bYwk6d A941 56,0
Error in line 150: JSSe1FvMOu S57 72,4
Error in line 171: Hag3BfA S57 37,9
Error in line 176: cqAZtam S57 0,1
Error in line 187: Hm9sp A925 88,6
Error in line 192: JSSe1FvMOu A941 37,2
Error in line 207: J**e1FvMOu *57 14,7
Error in line 168: Ei2bYwk6d S57 49,5
Error in line 203: A925 A567 93,2
Error in line 218: JSSe1FvMOu S57 187,1
Error in line 222: Hm9sp A567 296,1
Error in line 220: A925 A925 387,9
Error in line 231: Ei2bYwk6d S57 19,7
Error in line 227: cqAZtam A941 484,0
Error in line 212: GFs A567 97,0
